# shared-libraries

./: AnimatedLabel.cpp  AnimatedLabel.h  AnimatedLineEditor.cpp  AnimatedLineEditor.h  AnimatedStackedWidget.cpp  AnimatedStackedWidget.h  AnimatedTabWidget.cpp  AnimatedTabWidget.h  AnimatedTextEditor.cpp  AnimatedTextEditor.h  AnimatedTreeView.cpp  AnimatedTreeView.h  ApplicationId.cpp  ApplicationId.h  ApplicationManager.cc  ApplicationManager.cpp  ApplicationManager.h  ArgList.cc  ArgList.cpp  ArgList.h  AutoSpellConfig.cc  AutoSpellConfig.h  AutoSpellConfiguration.cc  AutoSpellConfiguration.cpp  AutoSpellConfiguration.h  BackgroundPixmap.cpp  BackgroundPixmap.h  BaseApplication.cpp  BaseApplication.h  BaseClient.cpp  BaseClient.h  BaseConfigurationDialog.cc  BaseConfigurationDialog.cpp  BaseConfigurationDialog.h  BaseConfigurationDialog_p.h  BaseContextMenu.cpp  BaseContextMenu.h  BaseCoreApplication.cpp  BaseCoreApplication.h  BaseDialog.cpp  (+684 more)
base/: CMakeLists.txt  Color.cpp  Color.h  Command.cpp  Command.h  CommandLineArguments.cpp  CommandLineArguments.h  CommandLineParser.cpp  CommandLineParser.h  Counter.h  CounterMap.cpp  CounterMap.h  CppUtil.h  CustomProcess.cpp  CustomProcess.h  Debug.cpp  Debug.h  File.cpp  File.h  FileRecord.cpp  FileRecord.h  FileThread.cpp  FileThread.h  Functors.h  IntegralType.h  Key.cpp  Key.h  Margins.h  NonCopyable.h  ObjectDeleter.h  Operators.h  Option.cpp  Option.h  Options.cpp  Options.h  QOrderedSet.h  ResourceMigration.cpp  ResourceMigration.h  Singleton.cpp  Singleton.h  (+10 more)
base-cmake/: FindX11_XCB.cmake  Macros.cmake
base-filesystem/: BaseFileSystemWidget.cpp  BaseFileSystemWidget.h  CMakeLists.txt  FileIconProvider.cpp  FileIconProvider.h  FileInformationDialog.cpp  FileInformationDialog.h  FileRecordProperties.h  FileSystemDefaultOptions.h  FileSystemFrame.cpp  FileSystemFrame.h  FileSystemIconNames.h  FileSystemModel.cpp  FileSystemModel.h  FileSystemWidget.cpp  FileSystemWidget.h  RemoveFilesDialog.cpp  RemoveFilesDialog.h  RenameFileDialog.cpp  RenameFileDialog.h  baseFileSystem.qrc  base_filesystem_export.h
base-help/: CMakeLists.txt  DefaultHelpText.h  HelpDialog.cpp  HelpDialog.h  HelpItem.cpp  HelpItem.h  HelpManager.cpp  HelpManager.h  HelpModel.cpp  HelpModel.h  base_help_export.h
base-notifications/: CMakeLists.txt  ImageData.cpp  ImageData.h  Notification.h  SystemNotifications.cpp  SystemNotifications.h  SystemNotifications_p.cpp  SystemNotifications_p.h  TaskBarProgressNotifications.cpp  TaskBarProgressNotifications.h  base_notifications_export.h
base-qt/: AbstractFindWidget.cpp  AbstractFindWidget.h  ApplicationFinder.cpp  ApplicationFinder.h  ApplicationMenu.cpp  ApplicationMenu.h  BaseConfigurationDialog.cpp  BaseConfigurationDialog.h  BaseConfigurationDialog_p.h  BaseContextMenu.cpp  BaseContextMenu.h  BaseDialog.cpp  BaseDialog.h  BaseFileIconProvider.cpp  BaseFileIconProvider.h  BaseFileInfo.cpp  BaseFileInfo.h  BaseFileInfoConfigurationWidget.cpp  BaseFileInfoConfigurationWidget.h  BaseFileInfoIconView.cpp  BaseFileInfoIconView.h  BaseFileInfoItemDelegate.cpp  BaseFileInfoItemDelegate.h  BaseFileInfoModel.h  BaseFileInfoToolTipWidget.cpp  BaseFileInfoToolTipWidget.h  BaseFileInformationDialog.cpp  BaseFileInformationDialog.h  BaseFindDialog.cpp  BaseFindDialog.h  BaseFindWidget.cpp  BaseFindWidget.h  BaseIconNames.h  BaseMainWindow.cpp  BaseMainWindow.h  BaseMenu.cpp  BaseMenu.h  BasePrintHelper.cpp  BasePrintHelper.h  BaseProgressBar.cpp  (+355 more)
base-server/: ApplicationId.cpp  ApplicationId.h  ApplicationManager.cpp  ApplicationManager.h  BaseApplication.cpp  BaseApplication.h  BaseCoreApplication.cpp  BaseCoreApplication.h  CMakeLists.txt  Client.cpp  Client.h  ServerCommand.cpp  ServerCommand.h  ServerConfiguration.cpp  ServerConfiguration.h  ServerSystemOptions.h.cmake  base_server_export.h
base-spellcheck/: AutoSpellConfiguration.cpp  AutoSpellConfiguration.h  CMakeLists.txt  DictionaryMenu.cpp  DictionaryMenu.h  DictionarySelectionButton.cpp  DictionarySelectionButton.h  FilterMenu.cpp  FilterMenu.h  FilterSelectionButton.cpp  FilterSelectionButton.h  SpellCheckConfiguration.cpp  SpellCheckConfiguration.h  SpellCheckConfigurationDialog.cpp  SpellCheckConfigurationDialog.h  SpellDialog.cpp  SpellDialog.h  SpellInterface.cpp  SpellInterface.h  SpellItemDialog.cpp  SpellItemDialog.h  SpellItemModel.cpp  SpellItemModel.h  SpellParser.cpp  SpellParser.h  SuggestionMenu.cpp  SuggestionMenu.h  TexString.cpp  TexString.h  Word.h  base_spellcheck_export.h
base-ssh/: CMakeLists.txt  SshBaseSocket.cpp  SshBaseSocket.h  SshChannelThread.cpp  SshChannelThread.h  SshConnection.cpp  SshConnection.h  SshConnectionAttributes.cpp  SshConnectionAttributes.h  SshFileReadSocket.cpp  SshFileReadSocket.h  SshFileTransferObject.cpp  SshFileTransferObject.h  SshFileWriteSocket.cpp  SshFileWriteSocket.h  SshListeningThread.cpp  SshListeningThread.h  SshLoginDialog.cpp  SshLoginDialog.h  SshReadFileSocket.cpp  SshReadFileSocket.h  SshSingleton.cpp  SshSingleton.h  SshSocket.cpp  SshSocket.h  SshTunnel.cpp  SshTunnel.h  SshTunnelAttributes.h  SshUtil.cpp  SshUtil.h  SshWriteFileSocket.cpp  SshWriteFileSocket.h  base_ssh_export.h
base-svg/: BaseSvgRenderer.cpp  BaseSvgRenderer.h  CMakeLists.txt  Svg.h  SvgConfiguration.cpp  SvgConfiguration.h  SvgDefaultOptions.h  SvgEngine.cpp  SvgEngine.h  SvgId.h  SvgPlasmaInterface.cpp  SvgPlasmaInterface.h  SvgRenderer.cpp  SvgRenderer.h  SvgSystemOptions.h.cmake  SvgThread.cpp  SvgThread.h  background-dark.svgz  base_svg_export.h
base-transparency/: CMakeLists.txt  CompositeEngine.cpp  CompositeEngine.h  Effects.h  ShadowLabel.cpp  ShadowLabel.h  TransparencyConfiguration.cpp  TransparencyConfiguration.h  TransparencyDefaultOptions.h  TransparentWidget.cpp  TransparentWidget.h  base_transparency_export.h
