ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = base-qt.pro basePixmaps.qrc

INCLUDES =  \
  -I$(qt_includes) \
  -I$(qt_includes)/Qt \
  -I$(qt_includes)/QtCore  \
  -I$(qt_includes)/QtXml \
  -I$(qt_includes)/QtGui \
  -I$(top_srcdir)/base

noinst_HEADERS = \
  AnimatedLabel.h \
  AnimatedLineEditor.h \
  AnimatedStackedWidget.h \
  AnimatedTabWidget.h \
  AnimatedTextEditor.h \
  AnimatedTreeView.h \
  BaseConfigurationDialog.h \
  BaseDialog.h \
  BaseFindDialog.h \
  BaseIcons.h \
  BaseMainWindow.h \
  BaseReplaceDialog.h \
  BlockHighlight.h \
  BoxSelection.h \
  BrowsedLineEditor.h \
  ClockLabel.h \
  Color.h \
  ColorDisplay.h \
  ColorGrabButton.h \
  ColorMenu.h \
  ColumnSelectionMenu.h \
  ColumnSortingMenu.h \
  CounterDialog.h \
  CounterModel.h \
  CursorMonitor.h \
  CustomComboBox.h \
  CustomDialog.h \
  CustomPixmap.h \
  CustomSlider.h \
  CustomTextDocument.h \
  CustomToolBar.h \
  CustomToolButton.h \
  DebugMenu.h \
  DockPanel.h \
  ElidedLabel.h \
  ErrorHandler.h \
  FileDialog.h \
  FileList.h \
  FileRecordBaseProperties.h \
  FileRecordModel.h \
  FlatStyle.h \
  FontEditor.h \
  FontInfo.h \
  GridLayout.h \
  IconBrowsedButton.h \
  IconEngine.h \
  IconSize.h \
  IconSizeMenu.h \
  ImageFileDialog.h \
  InformationDialog.h \
  IOString.h \
  ItemModel.h \
  KeyModifier.h \
  LineEditor.h \
  LineNumberDisplay.h \
  ListModel.h \
  LogWidget.h \
  MessageBuffer.h \
  MultipleClickCounter.h \
  OptionBrowsedLineEditor.h \
  OptionCheckBox.h \
  OptionColorDisplay.h \
  OptionComboBox.h \
  OptionDialog.h \
  OptionFontEditor.h \
  OptionFontInfo.h \
  OptionIconBrowsedButton.h \
  OptionLineEditor.h \
  OptionListBox.h \
  OptionModel.h \
  OptionRadioButton.h \
  OptionSlider.h \
  OptionSpinBox.h \
  OptionWidget.h \
  OptionWidgetList.h \
  PixmapCacheDialog.h \
  PixmapCacheModel.h \
  PixmapEngine.h \
  PrintPreviewDialog.h \
  QuestionDialog.h \
  QtUtil.h \
  RecentFilesConfiguration.h \
  RecentFilesMenu.h \
  RemoveLineBuffer.h \
  RoundedPath.h \
  RoundedRegion.h \
  ScratchFileMonitor.h \
  ScratchFileRemoveDialog.h \
  ScrollObject.h \
  SelectLineDialog.h \
  StatusBar.h \
  SystemEnvironmentDialog.h \
  TabbedDialog.h \
  TabWidget.h \
  TextEditor.h \
  TextEditorMarginWidget.h \
  TextEditionDelegate.h \
  TextBlockData.h \
  TextBlockFlags.h \
  TextPosition.h \
  TextSelection.h \
  TextSeparator.h \
  TileSet.h \
  ToolBarMenu.h \
  ToolButtonStyleMenu.h \
  TransitionWidget.h \
  TreeItem.h \
  TreeItemBase.h \
  TreeModel.h \
  TreeView.h \
  TreeViewConfiguration.h \
  UserSelectionFrame.h \
  ValidFileThread.h \
  WindowMonitor.h \
  WinUtil.h \
  X11Util.h \
  XmlCommandLineArguments.h \
  XmlError.h \
  XmlFileList.h \
  XmlFileRecord.h \
  XmlOption.h \
  XmlOptions.h \
  XmlTextFormatBlock.h \
  XmlTimeStamp.h \
  XmlString.h

sources = \
  AnimatedLabel.cpp \
  AnimatedLineEditor.cpp \
  AnimatedStackedWidget.cpp \
  AnimatedTabWidget.cpp \
  AnimatedTextEditor.cpp \
  AnimatedTreeView.cpp \
  BaseFindDialog.cpp \
  BaseMainWindow.cpp \
  BaseConfigurationDialog.cpp \
  BaseDialog.cpp \
  BaseReplaceDialog.cpp \
  BlockHighlight.cpp \
  BoxSelection.cpp \
  BrowsedLineEditor.cpp \
  ClockLabel.cpp \
  Color.cpp \
  ColorDisplay.cpp \
  ColorGrabButton.cpp \
  ColorMenu.cpp \
  ColumnSelectionMenu.cpp \
  ColumnSortingMenu.cpp \
  CounterDialog.cpp \
  CounterModel.cpp \
  CursorMonitor.cpp \
  CustomComboBox.cpp \
  CustomDialog.cpp \
  CustomPixmap.cpp \
  CustomSlider.cpp \
  CustomToolBar.cpp \
  CustomToolButton.cpp \
  DebugMenu.cpp \
  DockPanel.cpp \
  ElidedLabel.cpp \
  ErrorHandler.cpp \
  FileDialog.cpp \
  FileList.cpp \
  FileRecordModel.cpp \
  FlatStyle.cpp \
  FontEditor.cpp \
  FontInfo.cpp \
  IconBrowsedButton.cpp \
  IconEngine.cpp \
  IconSize.cpp \
  IconSizeMenu.cpp \
  ImageFileDialog.cpp \
  InformationDialog.cpp \
  IOString.cpp \
  ItemModel.cpp \
  KeyModifier.cpp \
  LineEditor.cpp \
  LineNumberDisplay.cpp \
  LogWidget.cpp \
  OptionDialog.cpp \
  OptionListBox.cpp \
  OptionModel.cpp \
  OptionWidgetList.cpp \
  PixmapCacheDialog.cpp \
  PixmapCacheModel.cpp \
  PixmapEngine.cpp \
  PrintPreviewDialog.cpp \
  QuestionDialog.cpp \
  QtUtil.cpp \
  RecentFilesConfiguration.cpp \
  RecentFilesMenu.cpp \
  RemoveLineBuffer.cpp \
  RoundedPath.cpp \
  RoundedRegion.cpp \
  ScratchFileMonitor.cpp \
  ScratchFileRemoveDialog.cpp \
  ScrollObject.cpp \
  SelectLineDialog.cpp \
  StatusBar.cpp \
  SystemEnvironmentDialog.cpp \
  TabbedDialog.cpp \
  TabWidget.cpp \
  TextEditor.cpp \
  TextEditorMarginWidget.cpp \
  TextEditionDelegate.cpp \
  TextPosition.cpp \
  TextSeparator.cpp \
  TileSet.cpp \
  ToolBarMenu.cpp \
  ToolButtonStyleMenu.cpp \
  TransitionWidget.cpp \
  TreeItemBase.cpp \
  TreeView.cpp \
  TreeViewConfiguration.cpp \
  UserSelectionFrame.cpp \
  ValidFileThread.cpp \
  WinUtil.cpp \
  WindowMonitor.cpp \
  X11Util.cpp \
  XmlCommandLineArguments.cpp \
  XmlFileList.cpp \
  XmlFileRecord.cpp \
  XmlOption.cpp \
  XmlOptions.cpp \
  XmlTextFormatBlock.cpp \
  XmlTimeStamp.cpp \
  XmlString.cpp

nodist_sources = \
  qrc_basePixmaps.cpp \
  moc_AnimatedLabel.cpp \
  moc_AnimatedLineEditor.cpp \
  moc_AnimatedStackedWidget.cpp \
  moc_AnimatedTabWidget.cpp \
  moc_BaseConfigurationDialog.cpp \
  moc_BaseDialog.cpp \
  moc_BaseFindDialog.cpp \
  moc_BaseMainWindow.cpp \
  moc_BaseReplaceDialog.cpp \
  moc_BlockHighlight.cpp \
  moc_BrowsedLineEditor.cpp \
  moc_ColorDisplay.cpp \
  moc_ColorGrabButton.cpp \
  moc_ColorMenu.cpp \
  moc_ColumnSelectionMenu.cpp \
  moc_ColumnSortingMenu.cpp \
  moc_ClockLabel.cpp \
  moc_CounterDialog.cpp \
  moc_CustomComboBox.cpp \
  moc_CustomSlider.cpp \
  moc_CustomTextDocument.cpp \
  moc_CustomToolBar.cpp \
  moc_CustomToolButton.cpp \
  moc_DebugMenu.cpp \
  moc_DockPanel.cpp \
  moc_FileList.cpp \
  moc_FileRecordModel.cpp \
  moc_FontEditor.cpp \
  moc_IconBrowsedButton.cpp \
  moc_IconSizeMenu.cpp \
  moc_ImageFileDialog.cpp \
  moc_LineEditor.cpp \
  moc_LineNumberDisplay.cpp \
  moc_LogWidget.cpp \
  moc_OptionDialog.cpp \
  moc_OptionListBox.cpp \
  moc_OptionModel.cpp \
  moc_PixmapCacheDialog.cpp \
  moc_RecentFilesConfiguration.cpp \
  moc_RecentFilesMenu.cpp \
  moc_RemoveLineBuffer.cpp \
  moc_ScratchFileMonitor.cpp \
  moc_ScratchFileRemoveDialog.cpp \
  moc_ScrollObject.cpp \
  moc_SelectLineDialog.cpp \
  moc_StatusBar.cpp \
  moc_TabbedDialog.cpp \
  moc_TabWidget.cpp \
  moc_TextEditor.cpp \
  moc_TextEditorMarginWidget.cpp \
  moc_ToolButtonStyleMenu.cpp \
  moc_TransitionWidget.cpp \
  moc_TreeView.cpp \
  moc_TreeViewConfiguration.cpp \
  moc_UserSelectionFrame.cpp \
  moc_XmlFileList.cpp

# shared library
if ENABLE_SHARED
AM_LDFLAGS = -L$(libdir) -L$(qt_libraries)

lib_LTLIBRARIES = libbase-qt.la
libbase_qt_la_LIBADD = -l$(qt_lib) -lQtGui -lQtXml -lbase
libbase_qt_la_SOURCES = $(sources)
nodist_libbase_qt_la_SOURCES = $(nodist_sources)
libbase_qt_la_CXXFLAGS = $(AM_CXXFLAGS)

# executable
BUILT_SOURCES = testexternals.c
noinst_PROGRAMS = testexternals
testexternals_LDADD = libbase-qt.la

testexternals.c:
	echo "//*** this is a generated file. Do not commit, do not edit" > $@
	echo "int main()" >> $@
	echo "{" >> $@
	echo "  return 0;" >> $@
	echo "}" >> $@

else

# static library
noinst_LIBRARIES = libbase-qt.a
libbase_qt_a_SOURCES = $(sources)
nodist_libbase_qt_a_SOURCES = $(nodist_sources)
libbase_qt_a_XXCFLAGS = $(AM_CXXFLAGS)

endif

#clean
clean-local:
	rm -f moc_*.cpp
	rm -f qrc_*.cpp

### rule to generate qt meta objects
moc_%.cpp: %.h
	$(qt_moc) $^ -o $@

qrc_%.cpp: %.qrc
	$(qt_rcc) -name $* $^ -o $@
