# $Id$

ACLOCAL_AMFLAGS = -I m4
AM_CXXFLAGS = ${QT_CFLAGS}
AM_LDFLAGS = ${QT_LIBS}

EXTRA_DIST = \
application-exit.png \
arrow-left.png \
arrow-right.png \
bookmarks.png \
color-picker.png \
configure.png \
configure-toolbars.png \
dialog-cancel.png \
dialog-close.png \
dialog-information.png \
dialog-ok-apply.png \
dialog-ok.png \
document-encrypt.png \
document-open-folder.png \
document-open.png \
document-open-recent.png \
document-print.png \
document-print-preview.png \
edit-clear-locationbar-rtl.png \
edit-copy.png \
edit-cut.png \
edit-paste.png \
edit.png \
edit-redo.png \
edit-rename.png \
edit-undo.png \
format-fill-color.png \
help-contents.png \
input-mouse.png \
im-user.png \
list-add.png \
list-remove.png \
messagebox_warning.png \
network-server.png \
preferences-desktop-color.png \
preferences-desktop-theme.png \
preferences-desktop-notification.png \
preferences-desktop-filetype-association.png \
preferences-other.png \
preferences-system-windows-actions.png \
preferences-desktop-wallpaper.png \
preferences-web-browser-cache.png \
qt-logo.png \
system-run.png \
show-menu.png \
text-html.png \
tool-animator.png \
user-trash.png \
view-refresh.png \
view-list-tree.png \
view-split-left-right.png \
zoom-in-large.png \
zoom-in.png
