AC_INIT(configure.in)
AM_INIT_AUTOMAKE(shared-libraries, 1.0.1)
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CXX(CC g++)
AC_ENABLE_STATIC(no)
AC_PROG_LIBTOOL
CXXFLAGS="-g -O2 -Wall -Werror -Wno-non-virtual-dtor"

dnl *********************************************
dnl x11
dnl *********************************************
AC_CHECK_LIB([X11], [XOpenDisplay], [],[
         echo "X11 library is required for this program"
         exit -1])

dnl *********************************************
dnl Qt
dnl *********************************************
PKG_PROG_PKG_CONFIG()
PKG_CHECK_MODULES(QT, [QtCore, QtGui, QtNetwork, QtXml, QtSvg, QtDBus])
AC_SUBST(QT_CFLAGS)
AC_SUBST(QT_LIBS)

dnl *********************************************
dnl aspell
dnl *********************************************
AC_PATH_PROG(ASPELL,    aspell,    aspell)

dnl ****************
dnl set aspell directory
AC_ARG_WITH(aspell-dir,
  [ --with-aspell-dir=path    Path to aspell directory /usr ],
  aspell_dir=$withval, aspell_dir= )

if test "$aspell_dir" = ""; then
  aspell_dir=/usr
fi

dnl ************************
dnl set aspell library directory
AC_ARG_WITH(aspell-libraries,
  [ --with-aspell-libraries=path    Path to aspell libraries directory /usr/lib ],
  aspell_libraries=$withval, aspell_libraries=)

if test "$aspell_libraries" = ""; then
  aspell_libraries=$aspell_dir/lib
fi

dnl ************************
dnl set aspell include directory
AC_ARG_WITH(aspell-includes,
  [ --with-aspell-includes=path    Path to aspell includes directory /usr/include ],
  aspell_includes=$withval, aspell_includes=)

if test "$aspell_includes" = ""; then
  aspell_includes=$aspell_dir/include
fi

dnl ***********************
dnl aspell configuration checks

echo ""
aspell=1
AC_CHECK_FILE($aspell_includes/aspell.h,, [aspell=0] )
AC_CHECK_FILE($aspell_libraries/libaspell.so, aspell_lib=aspell, [aspell=0] )


if test $aspell = 1; then
	AC_SUBST(aspell_dir)
	AC_SUBST(aspell_libraries)
	AC_SUBST(aspell_includes)

	echo ""
	echo "aspell configuration:"
	echo "aspell_lib       = " $aspell_lib
	echo "aspell_dir       = " $aspell_dir
	echo "aspell_libraries = " $aspell_libraries
	echo "aspell_includes  = " $aspell_includes
	echo ""
else
	echo ""
	echo "aspell configuration:"
	echo "invalid aspell configuration"
	echo "spell-check disabled"
	echo ""
fi

AM_CONDITIONAL(WITH_ASPELL, [test $aspell = 1])
AC_SUBST(aspell)

dnl **************************
dnl Shared vs static

enable_shared_libraries=true;
AM_CONDITIONAL(ENABLE_SHARED, [test no != $enable_shared_libraries])

dnl **************************
dnl retrieve current timestamp
timestamp=`date +"%G/%m/%d"`
AC_SUBST(timestamp)
echo ""
echo "timestamp = " $timestamp

dnl *************************
dnl output files
echo ""
AC_OUTPUT( \
  Makefile \
  base/Makefile \
  base-qt/Makefile \
  base-help/Makefile \
  base-server/Makefile \
  base-svg/Makefile \
  base-transparency/Makefile \
  base-pixmaps/Makefile \
  base-spellcheck/Makefile
 )
